kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: petclinic
  name: petclinic
  namespace: ${NAMESPACE}
spec:
  ports:
  - port: 8082
    protocol: TCP
    targetPort: 8082
  selector:
    app: petclinic 
  type: NodePort
