kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    kubernetes.io/tls-acme: "true"
  name: petclinic
  namespace: ${NAMESPACE}
spec:
    rules:
    - host: petclinic-${NAMESPACE}.${INGRESS_IP}.nip.io
      http:
        paths:
        - backend:
            service:
              name: petclinic
              port:
                number: 3000
          path: /
          pathType: Prefix
    tls:
    - hosts:
      - petclinic-${NAMESPACE}.${INGRESS_IP}.nip.io
      secretName: ingress-local-tls
